# datastar_learn

./: .gitignore  chat.py  chat2.py  datastar_interaction_patterns.md  irgo_datastar_patterns.md  medical_records.py  podbaydoors.html  podbaydoors_server.py  pyproject.toml  sample_lookup.csv  single-file-django-bolt.md
docs/: datastar-context7-summary.md  datastar-django-bolt.md  datastar-single-page-docs.md  datastar_interaction_patterns-2026-04-15.md
rust/brotli-sse-actix/: Cargo.toml
rust/brotli-sse-actix/src/: lib.rs  main.rs
rust/brotli-sse-actix/tests/: streaming.rs
